1.Thumbnails of photos added to the locations table view; 2.Elegant solution to the Exercise at p. 243 to resize the thumbnail with aspect fill rule.

--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -383,24 +383,29 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btb-Yh-wPr">
-                                            <rect key="frame" x="8" y="8" width="304" height="21"/>
+                                            <rect key="frame" x="82" y="8" width="238" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dea-tI-eQ1">
-                                            <rect key="frame" x="8" y="35" width="304" height="21"/>
+                                            <rect key="frame" x="82" y="35" width="238" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xhp-6I-aVj">
+                                            <rect key="frame" x="15" y="2" width="52" height="52"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="addressLabel" destination="dea-tI-eQ1" id="mTf-Rw-GCk"/>
                                     <outlet property="descriptionLabel" destination="btb-Yh-wPr" id="ERl-P5-zkj"/>
+                                    <outlet property="photoImageView" destination="Xhp-6I-aVj" id="hFd-a9-OYp"/>
                                     <segue destination="WhG-M7-sjp" kind="presentation" identifier="EditLocation" id="jyb-I3-ZjD"/>
                                 </connections>
                             </tableViewCell>
@@ -507,6 +512,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="n6Q-sQ-eKe"/>
+        <segue reference="jyb-I3-ZjD"/>
     </inferredMetricsTieBreakers>
 </document>
